src/encoded/static/scss/encoded/modules/_item-pages.scss
/* ... */
.sample-variant-annotation-space-body {
	.card .inner-card-section {
		// TODO: Maybe consider propagating further, overriding btn-outline-secondary or btn-secondary with
		// this (since their defaults look somewhat like disabled - but maybe useful idk)
		> .info-header-title {
			> .dropdown > .btn-outline-secondary {
				@include button-variant(#fff, #e0e0e0);
			}
		}

		.search-view-controls-and-results[data-search-item-type="Gene"] .result-table-detail .gene-tab-body.card-body .row>.col-12.col-md-6.d-flex:first-of-type .inner-card-section:first-of-type {
			// Make transcript selector button push to new line & create space in body for it.
			.info-header-title {
				flex-wrap: wrap;
			}

			.info-body {
				@media (max-width:1300px) and (min-width:768px) {
					padding-top: 50px;
				}
			}
		}
	}

	.sample-variant-info-header {
		// Ensure we're above other titles/etc.
		// For dropdown
		position: relative;
		z-index: 10;
	}

	.sample-variant-overview-tab-view-container {
		.tabs-column {
			position: relative;
			z-index: 2;
			//flex-grow: 0; // Will adjust via responsive Bootstrap classNames
			//flex-shrink: 0;
			> button.overview-tab {
				height: 48px;
				width: 100%;
				display: block;
				border: none;
				margin-bottom: 5px;
				font-weight: 600;
				border-radius: 0;
				background-color: #beccda;
				color: $primary-dark;
				line-height: 1.125; /* scrunch up the text a little bit if it flows onto a 2nd+ line */
				&[disabled]{
					color: #fff8;
				}
				&[data-active="true"] {
					@extend .card;
					color: $primary-dark;
					display: initial;
					flex-direction: initial;
					@include media-breakpoint-up(lg){
						border-top-right-radius: 0px;
						border-top-right-radius: 0px;
						&:after {
							content: "";
							position: absolute;
							top: 0;
							bottom: 0;
							right: -4px;
							width: 6px;
							background-color: inherit;
							border-top-right-radius: 0px;
							border-bottom-right-radius: 0px;
						}
					}
				}
			}
		}

		.content-column {
			flex-basis: 320px;
			min-width: 320px;
			flex-grow: 1;
			@include media-breakpoint-up(lg){
				&.card {
					// Blend/align the topleft corner with the column of tab links
					border-top-left-radius: 0px;
				}
			}

			.embedded-search-view-outer-container .search-view-controls-and-results {
				&[data-search-item-type="Gene"] .info-header-title .dropdown-menu.show {
					max-height: 180px;
				}
			}
		}
	}

	.interpretation-space-wrapper-column {
		flex-basis: 375px;
	}

	.interpretation-space {
		position: sticky;
		position: -webkit-sticky;
		top: 50px;

		.card-header.interpretation-header {
			background-color: $primary-dark;
			color: #ffffff;
			font-size: 1.1em;

			button:focus {
				outline: thin dotted;
			}
		}

		.card-body {
			ul {
				list-style-type: none;
				border:1px solid lightgray;
				border-radius: 5px;
				li.interpretation-tab {
					&[data-active="true"] {
						background-color: #beccda;
						color: $primary-dark;
						border-radius: 3px;
					}
					font-size: 13px;
					padding: 3px 7px;
				}
			}

			.interpretation-panel {
				margin: 10px 0;

				textarea {
					border-color: lightgrey;
    				border-radius: 5px;
					padding: 10px;
				}

				.note-field-drop .dropdown.btn-group {
					width: 270px;
					flex-grow: 1;
					
					>button {
						max-width: 100%;
						text-overflow: ellipsis;
						overflow: hidden;
					}
				}
			}
		}
	}
}

@include media-breakpoint-up(lg){
	.sv-browser-settings {
		max-width: 215px;
	}
}
/* ... */

